--- a/index.html
+++ b/index.html
@@ -1,26 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Network</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+<html lang="en" <head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Food Network</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="top-banner flexible-container">
+    <section class="flexible-container">
         <div class="half-width">
-            <h1>Skip The Diet,Just Eat Healthy With Food Network</h1>
-            <h1><span class="orange-color">Skip</span>The Diet,Just Eat Healthy With Food Network </h1>
-            <h3>Imagine you don't need a diet because we provide healthy and delicious food for you</h3>
-            <p>pppp</p>
+            <h1><span class="orange-color">Skip </span>The Diet, </h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
 
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you</p>
+            <a class="link-button" target="-blank" href="">Order Food</a>
         </div>
+        <div class="half-width">
+            <img src="images/female/Group 8425.png"">
+        </div>
+    </section>
+    <section class=" top-banner flexible-container" About Me flexible-container">
+            <div class="half-width">
+                <img src="images/female/Person Image.png" width="600" height="600" alt="">
+            </div>
+            <div class="half-width">
+                <h2>About Me</h2>
+                <p>Healthy food refers to foods that contain beneficial nutrients. These nutrients commonly include
+                    carbohydrates, protein, fat, minerals, vitamins, and water. ... This is why healthy food keeps our
+                    body fit for work and free from diseases. Food that does not contain the right quantity of nutrients
+                    is called unhealthy food.</p>
+                <a class="link-button2" target="-blank" href="">Contact Me</a>
+
+            </div>
+    </section>
+
+    <h1>MY Recipes</h1>
+    <p>Healthy foods assist a person in enhancing the physical and mental well-being. These foods are full of
+        nourishment and enhance growth</p>
+
+    <section class="flexible-container My Recipes-area">
+        <div class="half-width">
+            <img src="images/food/Project Cover.jpg" width="300" height="300" alt="">
+            <h1>Recipes Title</h1>
+            <p>Healthy foods assist a person in enhancing the physical and mental well-being. These foods are full of
+                nourishment and enhance growth</p>
+        </div>
+
+        <div class="half-width">
+            <img src="images/food/Project Cover.png" width="300" height="300" alt="">
+            <h1>Recipes Title</h1>
+            <p>Healthy foods assist a person in enhancing the physical and mental well-being. These foods are full of
+                nourishment and enhance growth</p>
+        </div>
+
+        <div class="half-width">
+            <img src="images/food/Project Cover1.jpg" width="300" height="300" alt="">
+            <h1>Recipes Title</h1>
+            <p>Healthy foods assist a person in enhancing the physical and mental well-being. These foods are full of
+                nourishment and enhance growth</p>
+        </div>
+    </section>
+
+
+
+
+
 
 </body>
 
