--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Food Network</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,10 +23,10 @@
             <a class="link-button" target="-blank" href="">Order Food</a>
         </div>
         <div class="half-width">
-            <img src="images/female/Group 8425.png"">
-        </div>
-    </section>
-    <section class=" top-banner flexible-container" About Me flexible-container">
+            <img src="images/female/Group 8425.png" ">
+            </div>
+        </section>
+        <section class=" top-banner flexible-container " About Me flexible-container">
             <div class="half-width">
                 <img src="images/female/Person Image.png" width="600" height="600" alt="">
             </div>
@@ -32,41 +34,57 @@
                 <h2>About Me</h2>
                 <p>Healthy food refers to foods that contain beneficial nutrients. These nutrients commonly include
                     carbohydrates, protein, fat, minerals, vitamins, and water. ... This is why healthy food keeps our
-                    body fit for work and free from diseases. Food that does not contain the right quantity of nutrients
-                    is called unhealthy food.</p>
+                    body fit for work and free from diseases.
+                    Food that does not contain the right quantity of nutrients is called unhealthy food.</p>
                 <a class="link-button2" target="-blank" href="">Contact Me</a>
 
             </div>
     </section>
 
-    <h1>MY Recipes</h1>
-    <p>Healthy foods assist a person in enhancing the physical and mental well-being. These foods are full of
-        nourishment and enhance growth</p>
+    <h1 class="tag">MY Recipes</h1>
+    <p>Healthy foods assist a person in enhancing the physical and mental well-being.</p>
 
-    <section class="flexible-container My Recipes-area">
-        <div class="half-width">
+    <section class="flexible-container-1">
+        <div class="three-width">
             <img src="images/food/Project Cover.jpg" width="300" height="300" alt="">
             <h1>Recipes Title</h1>
-            <p>Healthy foods assist a person in enhancing the physical and mental well-being. These foods are full of
-                nourishment and enhance growth</p>
+            <p>Healthy foods assist a person <br> in enhancing the physical and mental <br> well-being. These foods br
+                are full of nourishment <br> and enhance growth</p>
         </div>
 
-        <div class="half-width">
+        <div class="three-width">
             <img src="images/food/Project Cover.png" width="300" height="300" alt="">
             <h1>Recipes Title</h1>
-            <p>Healthy foods assist a person in enhancing the physical and mental well-being. These foods are full of
-                nourishment and enhance growth</p>
+            <p>Healthy foods assist a person <br> in enhancing the physical and <br> mental well-being. These foods are
+                full <br> of and enhance growth</p>
         </div>
 
-        <div class="half-width">
+        <div class="three-width">
             <img src="images/food/Project Cover1.jpg" width="300" height="300" alt="">
             <h1>Recipes Title</h1>
-            <p>Healthy foods assist a person in enhancing the physical and mental well-being. These foods are full of
-                nourishment and enhance growth</p>
+            <p>Healthy foods assist a person in enhancing <br> the physical and mental well-being. <br> These foods are
+                full of nourishment <br> and enhance growth</p>
         </div>
     </section>
+    <section class="flexible-container-2">
+        <div>
+            <div>
+                <h1>1000k</h1>
+                <p>Facebook Follower</p>
+            </div>
+            <div>
+                <h1>500k</h1>
+                <p>Instagram Follower</p>
+
+            </div>
+            <div>
+                <h1>900k</h1>
+                <p>Youtube Subscriber</p>
+            </div>
+        </div>
 
 
+    </section>
 
 
 
